# FatCRM

./: .clazy  .gitignore  .krazy  CMakeLists.txt  DESIGN  FindKDSoap.cmake  LICENSE.GPL.txt  README.md  ReadMe.md  appveyor.ini  appveyor.yml  config-fatcrm-version.h.cmake  config-phonenumber.h.cmake  debian.changelog  debian.control  fatcrm.categories  fatcrm.dsc  fatcrm.spec  kf5-fatcrm-debian.control  kf5-fatcrm.dsc  kf5-fatcrm.spec
client/: CMakeLists.txt  FindKDReports.cmake  README
client/data/flags/: README.md  flags.qrc
client/icons/: CMakeLists.txt
client/src/: CMakeLists.txt  Messages.sh  abstractdetails.cpp  abstractdetails.h  accountdetails.cpp  accountdetails.h  accountdetails.ui  accountsfilterproxymodel.cpp  accountsfilterproxymodel.h  accountspage.cpp  accountspage.h  accountspage.ui  accountstreemodel.cpp  accountstreemodel.h  campaigndetails.cpp  campaigndetails.h  campaigndetails.ui  campaignspage.cpp  campaignspage.h  campaignspage.ui  campaignstreemodel.cpp  campaignstreemodel.h  contactdetails.cpp  contactdetails.h  contactdetails.ui  contactspage.cpp  contactspage.h  contactspage.ui  dbuswinidprovider.cpp  dbuswinidprovider.h  details.cpp  details.h  details.ui  detailswidget.cpp  detailswidget.h  detailswidget.ui  editcalendarbutton.cpp  editcalendarbutton.h  fatcrm.desktop  fatcrm_client_debug.cpp  (+28 more)
client/src/app/: clientsettings.cpp  clientsettings.h  fatcrm_version.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sugarclient.cpp  sugarclient.h
client/src/details/: accountdetails.cpp  accountdetails.h  accountdetails.ui  campaigndetails.cpp  campaigndetails.h  campaigndetails.ui  contactdetails.cpp  contactdetails.h  contactdetails.ui  details.cpp  details.h  detailswidget.cpp  detailswidget.h  detailswidget.ui  leaddetails.cpp  leaddetails.h  leaddetails.ui  opportunitydetails.cpp  opportunitydetails.h  opportunitydetails.ui
client/src/dialogs/: aboutdialog.cpp  aboutdialog.h  accountimportdialog.cpp  accountimportdialog.h  accountimportdialog.ui  accountimportpage.cpp  accountimportpage.h  accountimportpage.ui  addsearchdialog.cpp  addsearchdialog.h  addsearchdialog.ui  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  contactsimportpage.cpp  contactsimportpage.h  contactsimportpage.ui  contactsimportwizard.cpp  contactsimportwizard.h  detailsdialog.cpp  detailsdialog.h  detailsdialog.ui  documentswindow.cpp  documentswindow.h  documentswindow.ui  editlistdialog.cpp  editlistdialog.h  fatcrminputdialog.cpp  fatcrminputdialog.h  itemeditwidgetbase.cpp  itemeditwidgetbase.h  notesdialog.cpp  notesdialog.h  notesdialog.ui  noteswindow.cpp  noteswindow.h  noteswindow.ui  resourceconfigdialog.cpp  resourceconfigdialog.h  resourceconfigdialog.ui  (+13 more)
client/src/icons/: icons.qrc
client/src/models/: accountstreemodel.cpp  campaignsfilterproxymodel.cpp  campaignsfilterproxymodel.h  contactsfilterproxymodel.cpp  contactsfilterproxymodel.h  contactstreemodel.cpp  contactstreemodel.h  filterproxymodel.cpp  filterproxymodel.h  itemstreemodel.cpp  itemstreemodel.h  leadsfilterproxymodel.cpp  leadsfilterproxymodel.h  leadstreemodel.cpp  opportunitiesfilterproxymodel.h  opportunityfilterproxymodel.cpp  (+3 more)
invoker/: CMakeLists.txt  fatcrminvoker.desktop  invoker.cpp  invoker.h  main.cpp
kdcrmdata/: CMakeLists.txt  akonadi_serializer_sugaraccount.desktop  akonadi_serializer_sugarcampaign.desktop  akonadi_serializer_sugardocument.desktop  akonadi_serializer_sugaremail.desktop  akonadi_serializer_sugarlead.desktop  akonadi_serializer_sugarnote.desktop  akonadi_serializer_sugaropportunity.desktop  enumdefinitionattribute.cpp  enumdefinitionattribute.h  enumdefinitions.cpp  enumdefinitions.h  kdabcrm-mime.xml  kdcrmdata_export.h  kdcrmfields.cpp  kdcrmfields.h  kdcrmutils.cpp  kdcrmutils.h  serializerpluginsugaraccount.cpp  serializerpluginsugaraccount.h  serializerpluginsugarcampaign.cpp  serializerpluginsugarcampaign.h  serializerpluginsugardocument.cpp  serializerpluginsugardocument.h  serializerpluginsugaremail.cpp  serializerpluginsugaremail.h  serializerpluginsugarlead.cpp  serializerpluginsugarlead.h  serializerpluginsugarnote.cpp  serializerpluginsugarnote.h  serializerpluginsugaropportunity.cpp  serializerpluginsugaropportunity.h  sugaraccount.cpp  sugaraccount.h  sugaraccountcache.cpp  sugaraccountcache.h  sugaraccountio.cpp  sugaraccountio.h  sugarcampaign.cpp  sugarcampaign.h  (+24 more)
resources/: CMakeLists.txt  config-kwallet.h.in
resources/salesforce/: CMakeLists.txt  FindKDSoap.cmake  Messages.sh  contactshandler.cpp  contactshandler.h  moduledebuginterface.cpp  moduledebuginterface.h  modulehandler.cpp  modulehandler.h  resourcedebuginterface.cpp  resourcedebuginterface.h  salesforce-enterprise.wsdl  salesforce-partner.wsdl  salesforceconfigdialog.cpp  salesforceconfigdialog.h  salesforceconfigdialog.ui  salesforcecontactshandler.cpp  salesforcecontactshandler.h  salesforcemodulehandler.cpp  salesforcemodulehandler.h  salesforceresource.cpp  salesforceresource.desktop  salesforceresource.h  salesforceresource.kcfg  settings.kcfgc
resources/sugarcrm/: CMakeLists.txt  FindKDSoap.cmake  Messages.sh  README  README.md  accountshandler.cpp  accountshandler.h  campaignshandler.cpp  campaignshandler.h  conflicthandler.cpp  conflicthandler.h  conflictresolvedialog.cpp  conflictresolvedialog.h  contactshandler.cpp  contactshandler.h  createentryjob.cpp  createentryjob.h  currency.cpp  currency.h  deleteentryjob.cpp  deleteentryjob.h  documentshandler.cpp  documentshandler.h  emailshandler.cpp  emailshandler.h  fetchentryjob.cpp  fetchentryjob.h  itemdownloadinterface.cpp  itemdownloadinterface.h  itemtransferinterface.cpp  itemtransferinterface.h  leadshandler.cpp  leadshandler.h  listdeletedentriesjob.cpp  listdeletedentriesjob.h  listentriesjob.cpp  listentriesjob.h  listentriesscope.cpp  listentriesscope.h  listmodulesjob.cpp  (+48 more)
tests/auto/: CMakeLists.txt  kdcrmutilstest.cpp  qdateeditextest.cpp  referenceddatatest.cpp  test_accountcache.cpp  test_accountrepository.cpp  test_contactsimporter.cpp  test_enumdefinitions.cpp
(+177 files in other folders)
